[package]
name = "waku-rust-simple-example"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "ws2tcpip", "bcrypt", "userenv", "ntdef", "ntstatus", "winnt", "minwinbase", "minwindef"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.52"
